--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node servis.js"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.6",
     "mysql2": "^2.3.3-rc.0",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
     "sequelize-cli": "^6.3.0"
   }
